--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@hapi/joi-date": "^2.0.1",
     "adm-zip": "0.5.9",
     "agentkeepalive": "^4.2.1",
-    "applicationinsights": "2.2.1",
+    "applicationinsights": "^2.2.2",
     "applicationinsights-native-metrics": "0.0.7",
     "body-parser": "^1.19.2",
     "case": "^1.6.3",
@@ -105,7 +105,7 @@
     "concat-stream": "^2.0.0",
     "config": "3.3.7",
     "connect-flash": "^0.1.1",
-    "connect-redis": "6.1.1",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
@@ -120,11 +120,11 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "knex": "1.0.3",
+    "knex": "^1.0.4",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.1",
     "moment-business-days": "^1.2.0",
-    "nocache": "^3.0.1",
+    "nocache": "^3.0.3",
     "node-schedule": "^2.1.0",
     "notifications-node-client": "^5.1.1",
     "passport": "^0.5.2",
@@ -148,17 +148,17 @@
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.37",
-    "@types/jest": "27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "14.14.31",
     "@types/passport": "^1.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "concurrently": "^7.0.0",
-    "eslint": "8.9.0",
+    "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "8.4.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
@@ -166,15 +166,15 @@
     "jest-html-reporter": "3.4.2",
     "jest-junit": "^13.0.0",
     "jest-mock": "^27.5.1",
-    "lint-staged": "12.3.4",
+    "lint-staged": "^12.3.7",
     "nock": "13.2.4",
     "node-sass": "^7.0.1",
     "nodemon": "2.0.15",
     "pdf-parse": "^1.1.1",
-    "prettier": "2.5.1",
+    "prettier": "^2.6.1",
     "supertest": "^6.2.2",
-    "ts-jest": "27.1.3",
-    "typescript": "4.5.5"
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
