DCS-1081 prometheus alerts for prod to elp_alerts slack channel

--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -1,8 +1,8 @@
 ---
-# Values here are the same across all environments
 
 generic-prometheus-alerts:
   targetApplication: licences
+  alertSeverity: digital-prison-service-dev
 
 ingress:
   annotations:
