--- a/helm_deploy/licences/templates/ingress.yaml
+++ b/helm_deploy/licences/templates/ingress.yaml
@@ -8,11 +8,11 @@ metadata:
   labels:
     {{- include "app.labels" . | nindent 4 }}
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
     {{ if .Values.ingress.enable_allowlist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.allowlist | quote }}{{ end }}
 spec:
+  ingressClassName: default
   tls:
   - hosts:
     - {{ .Values.ingress.host }}
