--- a/package.json
+++ b/package.json
@@ -97,65 +97,65 @@
     "@hapi/joi-date": "^2.0.1",
     "adm-zip": "0.5.9",
     "agentkeepalive": "^4.2.1",
-    "applicationinsights": "^2.3.3",
+    "applicationinsights": "^2.3.5",
     "applicationinsights-native-metrics": "0.0.7",
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.1",
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
-    "config": "3.3.7",
+    "config": "^3.3.8",
     "connect-flash": "^0.1.1",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-session": "1.17.3",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "helmet": "^5.1.0",
-    "joi": "17.6.0",
-    "jquery": "^3.6.0",
+    "joi": "^17.6.2",
+    "jquery": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "knex": "^2.1.0",
+    "knex": "^2.3.0",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.4",
     "moment-business-days": "^1.2.0",
     "nocache": "^3.0.4",
     "node-schedule": "^2.1.0",
-    "notifications-node-client": "^5.1.1",
+    "notifications-node-client": "^5.2.0",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.6.1",
     "path": "^0.12.7",
-    "pg": "8.7.3",
+    "pg": "^8.8.0",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.2",
     "querystring": "^0.2.1",
     "ramda": "^0.28.0",
-    "redis": "4.2.0",
+    "redis": "^4.3.1",
     "request": "^2.88.2",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
-    "superagent": "^8.0.0",
-    "swagger-ui-express": "^4.4.0",
+    "superagent": "^8.0.2",
+    "swagger-ui-express": "^4.5.0",
     "util": "^0.12.4",
     "uuid": "8.3.2",
-    "winston": "^3.8.1"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.37",
     "@types/jest": "^27.4.1",
     "@types/node": "14.14.31",
-    "@types/passport": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@types/passport": "^1.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "audit-ci": "^6.3.0",
-    "concurrently": "^7.2.2",
-    "eslint": "^8.19.0",
+    "concurrently": "^7.4.0",
+    "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -164,17 +164,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jest": "27.5.1",
-    "jest-html-reporter": "3.4.2",
+    "jest-html-reporter": "^3.7.0",
     "jest-junit": "^13.2.0",
     "lint-staged": "^13.0.3",
-    "nock": "13.2.8",
-    "node-sass": "^7.0.1",
-    "nodemon": "2.0.19",
+    "nock": "^13.2.9",
+    "node-sass": "^7.0.3",
+    "nodemon": "^2.0.20",
     "pdf-parse": "^1.1.1",
     "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
+    "supertest": "^6.3.0",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
