--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -8,6 +8,7 @@ generic-data-analytics-extractor:
   databaseSecretName: dps-rds-instance-output
   analyticalPlatformSecretName: licences-analytical-platform-reporting-s3-bucket
   enabled: true
+  args: "extract_psql_all_tables_to_csv.sh && transfer_local_to_s3.sh"
 
 ingress:
   annotations:
