--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
-    "adm-zip": "0.5.9",
+    "adm-zip": "^0.5.10",
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "^2.3.6",
     "applicationinsights-native-metrics": "^0.0.8",
@@ -115,7 +115,7 @@
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
-    "helmet": "^5.1.0",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "jquery": "^3.6.1",
     "jsonwebtoken": "^9.0.0",
@@ -143,7 +143,7 @@
     "superagent": "^8.0.4",
     "swagger-ui-express": "^4.6.0",
     "util": "^0.12.5",
-    "uuid": "8.3.2",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -160,7 +160,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
