--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch-ts": "tsc -w",
     "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ dist/server.js",
     "build": "npm run clean && npm run css-build && tsc && npm run copy-views",
-    "start": "node dist/server.js",
+    "start": "ls -R && node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
     "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
     "start-mocks": "node mock-server/start.js",
@@ -26,6 +26,7 @@
     "css-build": "./bin/build-css",
     "clean": "rm -rf dist/* public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "db:knex": "knex",
+    "db:knex-migrate": "knex-migrate",
     "db:seed": "knex seed:run --env standard",
     "security_audit": "npx audit-ci --config audit-ci.json"
   },
