--- a/feature.env
+++ b/feature.env
@@ -54,3 +54,4 @@ GLOBAL_SEARCH_URL=http://localhost:3002/global-search
 FEEDBACK_SUPPORT_URL=https://support-dev.hmpps.service.justice.gov.uk/feedback-and-support
 
 LICENCE_RISK_MANAGEMENT_VERSION=3
+CURFEW_ADDRESS_REVIEW_VERSION=2
