--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -45,3 +45,4 @@ env:
   TOKENVERIFICATION_API_ENABLED: true
   FEEDBACK_SUPPORT_URL: "https://support-dev.hmpps.service.justice.gov.uk/feedback-and-support"
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
+  CURFEW_ADDRESS_REVIEW_VERSION: '2'
