--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -42,6 +42,7 @@ env:
   TOKENVERIFICATION_API_ENABLED: true
   FEEDBACK_SUPPORT_URL: "https://support.hmpps.service.justice.gov.uk/feedback-and-support"
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
+  CURFEW_ADDRESS_REVIEW_VERSION: '2'
 
 allowlist:
   office: "217.33.148.210/32"
