--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -43,6 +43,7 @@ env:
   FEEDBACK_SUPPORT_URL: "https://support-preprod.hmpps.service.justice.gov.uk/feedback-and-support"
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
+  LICENCE_POSTPONE_VERSION: '2'
 
 allowlist:
   office: "217.33.148.210/32"
