--- a/feature.env
+++ b/feature.env
@@ -55,3 +55,4 @@ FEEDBACK_SUPPORT_URL=https://support-dev.hmpps.service.justice.gov.uk/feedback-a
 
 LICENCE_RISK_MANAGEMENT_VERSION=3
 CURFEW_ADDRESS_REVIEW_VERSION=2
+LICENCE_POSTPONE_VERSION=2
